# CardSimulator

./: CMakeLists.txt  cards.conf  main.cpp
include/: CMakeLists.txt  Card.cpp  Card.hpp  CardPool.cpp  CardPool.hpp  Deck.cpp  Deck.hpp  Trial.cpp  Trial.hpp
